Gnome-shell v40+: Fix misaligned 'Do no disturb' button

--- a/gnome-shell/earlier-versions/gnome-shell.css
+++ b/gnome-shell/earlier-versions/gnome-shell.css
@@ -10,7 +10,7 @@ stage {
 /* Buttons */
 .button {
   color: #d8dee9;
-  background-color: #232831;
+  background-color: #2a2f3a;
   box-shadow: none;
   border: 1px solid #1f232b;
   text-shadow: 0 1px black;
@@ -19,7 +19,8 @@ stage {
   border-width: 0;
   padding: 4px 32px; }
   .button:focus {
-    color: #5E6A82;
+    background-color: #5E6A82;
+    color: #d8dee9;
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black;
     box-shadow: none;
@@ -38,8 +39,8 @@ stage {
     text-shadow: none;
     icon-shadow: none; }
   .button:hover {
-    color: #5E6A82;
-    background-color: rgba(50, 57, 70, 0.95);
+    background-color: #5E6A82;
+    color: #d8dee9;
     border: 1px solid #1f232b;
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black; }
@@ -66,20 +67,22 @@ stage {
     text-shadow: none;
     icon-shadow: none; }
   .modal-dialog-linked-button:focus {
-    color: #5E6A82;
+    background-color: #5E6A82;
+    color: #d8dee9;
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black;
     box-shadow: none;
     border: 1px solid #1f232b; }
     .modal-dialog-linked-button:focus:hover {
-      color: #5E6A82;
+      background-color: #5E6A82;
+      color: #d8dee9;
       text-shadow: 0 1px black;
       icon-shadow: 0 1px black;
       box-shadow: none;
       border: 1px solid #1f232b; }
   .modal-dialog-linked-button:hover {
-    color: #5E6A82;
-    background-color: rgba(50, 57, 70, 0.95);
+    background-color: #5E6A82;
+    color: #d8dee9;
     border: 1px solid #1f232b;
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black; }
@@ -1631,7 +1634,7 @@ StScrollBar {
 
 .keyboard-key {
   color: #d8dee9;
-  background-color: #232831;
+  background-color: #2a2f3a;
   box-shadow: none;
   border: 1px solid #1f232b;
   text-shadow: 0 1px black;
@@ -1643,14 +1646,15 @@ StScrollBar {
   font-weight: bold;
   border-radius: 5px; }
   .keyboard-key:focus {
-    color: #5E6A82;
+    background-color: #5E6A82;
+    color: #d8dee9;
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black;
     box-shadow: none;
     border: 1px solid #1f232b; }
   .keyboard-key:hover, .keyboard-key:checked {
-    color: #5E6A82;
-    background-color: rgba(50, 57, 70, 0.95);
+    background-color: #5E6A82;
+    color: #d8dee9;
     border: 1px solid #1f232b;
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black; }
@@ -1734,14 +1738,14 @@ StScrollBar {
     padding: 3px 18px; }
     .login-dialog .modal-dialog-button:default {
       color: #d8dee9;
-      background-color: #232831;
+      background-color: #2a2f3a;
       box-shadow: none;
       border: 1px solid #1f232b;
       text-shadow: 0 1px black;
       icon-shadow: 0 1px black; }
       .login-dialog .modal-dialog-button:default:hover, .login-dialog .modal-dialog-button:default:focus {
-        color: #5E6A82;
-        background-color: rgba(94, 106, 130, 0.7);
+        background-color: #5E6A82;
+        color: #d8dee9;
         border: 1px solid #1f232b;
         text-shadow: 0 1px black;
         icon-shadow: 0 1px black; }
